SERVER-26462 Check if _buffer is allocated in DocumentStorage::clone()